[project]
name = "applebusiness"
version = "0.1.0"
description = "Async Python client for the Apple Business API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "cryptography>=48.0.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.38",
]
